--- a/index.html
+++ b/index.html
@@ -5,26 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Header Logo</p>
-    <p>header link one</p>
-    <p>header link two</p>
-    <p>header link three</p>
-    <p>This website is awesome</p>
-    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-    <p>Sign up</p>
-    <p>This is a placeholder for an image</p>
-    <p>Some random information.</p>
+    <div class="header">
+        <p class="logo">Header Logo</p>
+        <a href="">header link one</a>
+        <a href="">header link two</a>
+        <a href="">header link three</a>
+        <p class="header_main_text">This website is awesome</p>
+        <p class="header_secondary_text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button>Sign up</button>
+        <p class="header_secondary_text">This is a placeholder for an image</p>
+    </div>
+    <p class="information">Some random information.</p>
     <p>this is some subtext under an illustration or image</p>
     <p>this is some subtext under an illustration or image</p>
     <p>this is some subtext under an illustration or image</p>
     <p>this is some subtext under an illustration or image</p>
-    <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
-    <p>-Thor, God of Thunder</p>
-    <p>Call to action! It's time!</p>
-    <p>Sign up for our product by clicking that button right over there!</p>
-    <p>Sign up</p>
-    <p>Copyright © The Odin Project 2021</p>
+    <div class="quote-section">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+        <p class="thor">-Thor, God of Thunder</p>
+    </div>
+    <div class="call-to-action">
+        <p>Call to action! It's time!</p>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button class="button2">Sign up</button>
+    </div>
+    <p class="footer">Copyright  ©  The Odin Project 2021</p>
 </body>
 </html>
