--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
 </head>
 <body>
     <div class="header">
-        <p class="logo">Header Logo</p>
-        <a href="">header link one</a>
-        <a href="">header link two</a>
-        <a href="">header link three</a>
-        <p class="header_main_text">This website is awesome</p>
-        <p class="header_secondary_text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button>Sign up</button>
-        <p class="header_secondary_text">This is a placeholder for an image</p>
+        <div class="upper-header">
+            <p class="logo">Header Logo</p>
+            <div class="links">
+                <a href="">header link one</a>
+                <a href="">header link two</a>
+                <a href="">header link three</a>
+            </div>
+        </div>
+        <div class="lower-header">
+            <div class="awesome-section">
+                <p class="header-main-text">This website is awesome</p>
+                <p class="header-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button class="button1">Sign up</button>
+            </div>
+            <p class="placeholder">this is a placeholder for an image</p>
+        </div>
     </div>
     <p class="information">Some random information.</p>
     <p>this is some subtext under an illustration or image</p>
