--- a/index.html
+++ b/index.html
@@ -27,10 +27,24 @@
         </div>
     </div>
     <p class="information">Some random information.</p>
-    <p>this is some subtext under an illustration or image</p>
-    <p>this is some subtext under an illustration or image</p>
-    <p>this is some subtext under an illustration or image</p>
-    <p>this is some subtext under an illustration or image</p>
+    <div class="illustrations">
+        <div class="illustration">
+            <div class="square"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="illustration">
+            <div class="square"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="illustration">
+            <div class="square"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="illustration">
+            <div class="square"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+    </div>
     <div class="quote-section">
         <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
         <p class="thor">-Thor, God of Thunder</p>
