--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
         <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
         <p class="thor">-Thor, God of Thunder</p>
     </div>
-    <div class="call-to-action">
-        <p>Call to action! It's time!</p>
-        <p>Sign up for our product by clicking that button right over there!</p>
+    <div class="call-to-action-section">
+        <div class="call-to-action-subsection">
+            <p class="call-to-action">Call to action! It's time!</p>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
         <button class="button2">Sign up</button>
     </div>
     <p class="footer">Copyright  ©  The Odin Project 2021</p>
